# libk

./: CMakeLists.txt  kernel_exports.yml  mep-toolchain.cmake  user_exports.yml
include/: _PDCLIB_config.h
include/libk/: _PDCLIB_glue.h  _PDCLIB_int.h  assert.h  errno.h  inttypes.h  limits.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
include/pdclib/: _PDCLIB_config.h
src/: _Exit.c  allocpages.c  close.c  fillbuffer.c  flushbuffer.c  io.c  open.c  remove.c  rename.c  seek.c  stdinit.c  tmpfile.c  vita.c
